--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="logo" href="index.html" lang="en">WebStudio</a>
             <ul class="menu list">
                 <li class="menu-link"><a href="">Студия</a></li>
-                <li class="menu-link"><a href="">Портфолио</a></li>
+                <li class="menu-link"><a href="./portfolio.html">Портфолио</a></li>
                 <li class="menu-link"><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -34,7 +34,7 @@
 <!-- Features -->
     <section>
         <h2>Особенности компании</h2>
-        <ul>
+        <ul class="list">
             <li>
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -60,15 +60,15 @@
 <!-- What do we do -->
     <section>
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
             <li>
-                <img src="./images/pic1.jpg" alt="Код на планшете" width="370">
+                <img src="./images/main-page/pic1.jpg" alt="Код на планшете" width="370">
             </li>
             <li>
-                <img src="./images/pic2.jpg" alt="Дизайн приложения" width="370">
+                <img src="./images/main-page/pic2.jpg" alt="Дизайн приложения" width="370">
             </li>
             <li>
-                <img src="./images/pic3.jpg" alt="Палитра цвета" width="370">
+                <img src="./images/main-page/pic3.jpg" alt="Палитра цвета" width="370">
             </li>
         </ul>
     </section>
@@ -76,24 +76,24 @@
 <!-- Our team -->
     <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list">
             <li>
-                    <img src="./images/img1.jpg" alt="Портрет" width="270">
+                    <img src="./images/main-page/img1.jpg" alt="Портрет" width="270">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
             </li>
             <li>
-                    <img src="./images/img2.jpg" alt="Портрет" width="270">
+                    <img src="./images/main-page/img2.jpg" alt="Портрет" width="270">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
             </li>
             <li>
-                    <img src="./images/img3.jpg" alt="Портрет" width="270">
+                    <img src="./images/main-page/img3.jpg" alt="Портрет" width="270">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
             </li>
             <li>
-                    <img src="./images/img4.jpg" alt="Портрет" width="270">
+                    <img src="./images/main-page/img4.jpg" alt="Портрет" width="270">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
             </li>
@@ -104,8 +104,8 @@
     <footer>
         <a href="index.html" lang="en">WebStudio</a>
         <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/8wRMJYcDEy7sv4ex5" target="_blank" rel="noreferrer noopener"></a>г. Киев, пр-т Леси Украинки, 26</li>
+            <ul class="list">
+                <li><a href="https://goo.gl/maps/8wRMJYcDEy7sv4ex5" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
