--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,63 @@
     </header>
 
     <main>
-        
+        <section>
+            <ul class="list">
+                <li class="portfolio-link">Все</li>
+                <li class="portfolio-link">Веб-сайты</li>
+                <li class="portfolio-link">Приложения</li>
+                <li class="portfolio-link">Дизайн</li>
+                <li class="portfolio-link">Маркетинг</li>
+            </ul>
+            <ul class="list">
+                <li>
+                    <img src="./images/portfolio-page/img1.jpg" alt="Веб-сайт" width="370">
+                    <h3>Технокряк</h3>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio-page/img2.jpg" alt="Баскетболисты в прыжке" width="370">
+                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio-page/img3.jpg" alt="Рыбка с названием ресторана" width="370">
+                    <h3>Ресторан Seafood</h3>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio-page/img4.jpg" alt="Наушники" width="370">
+                    <h3>Проект Prime</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio-page/img5.jpg" alt="Две небольшие коробочки" width="370">
+                    <h3>Проект Boxes</h3>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio-page/img6.jpg" alt="Веб-сайт" width="370">
+                    <h3>Inspiration has no Borders</h3>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio-page/img7.jpg" alt="Открытая книга" width="370">
+                    <h3>Издание Limited Edition</h3>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio-page/img8.jpg" alt="Этикетка товара" width="370">
+                    <h3>Проект LAB</h3>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio-page/img9.jpg" alt="Ноутбук с вебсайтом" width="370">
+                    <h3>Growing Business</h3>
+                    <p>Приложение</p>
+                </li>
+
+            </ul>
+        </section>
     </main>
 
     <footer>
