--- a/index.html
+++ b/index.html
@@ -4,62 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header class="page-header">
         <nav class="navigation">
-            <a class="logo" href="index.html" lang="en">WebStudio</a>
+            <a class="logo link" href="index.html" lang="en"><span class="logo-web">Web</span><span class="logo-studio-black">Studio</span></a>
             <ul class="menu list">
-                <li class="menu-link"><a href="">Студия</a></li>
-                <li class="menu-link"><a href="./portfolio.html">Портфолио</a></li>
-                <li class="menu-link"><a href="">Контакты</a></li>
+                <li><a class="menu-link link" href="./index.html">Студия</a></li>
+                <li><a class="menu-link link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="menu-link link" href="">Контакты</a></li>
             </ul>
         </nav>
             <ul class="list">
-                <li class="page-header-email"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="page-header-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="page-header-email link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="page-header-phone link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
     </header>
 
     <main>
-<!-- Banner -->
-        <section>
-            <h1>Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+<!-- Hero -->
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+            <button type="button" class="button">Заказать услугу</button>
         </section>
 
 <!-- Features -->
     <section>
-        <h2>Особенности компании</h2>
+        <h2 class="title">Особенности компании</h2>
         <ul class="list">
             <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <h3 class="title-item">Внимание к деталям</h3>
+                <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
 
             <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h3 class="title-item">Пунктуальность</h3>
+                <p class="description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
 
             <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h3 class="title-item">Планирование</h3>
+                <p class="description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
 
             <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h3 class="title-item">Современные технологии</h3>
+                <p class="description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
 
-<!-- What do we do -->
+<!-- What we do -->
     <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="title">Чем мы занимаемся</h2>
         <ul class="list">
             <li>
                 <img src="./images/main-page/pic1.jpg" alt="Код на планшете" width="370">
@@ -74,40 +77,40 @@
     </section>
 
 <!-- Our team -->
-    <section>
-        <h2>Наша команда</h2>
+    <section class="section-team">
+        <h2 class="title">Наша команда</h2>
         <ul class="list">
-            <li>
+            <li class="section-team-member">
                     <img src="./images/main-page/img1.jpg" alt="Портрет" width="270">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="title-name">Игорь Демьяненко</h3>
+                    <p class="title-name-description">Product Designer</p>
             </li>
-            <li>
+            <li class="section-team-member">
                     <img src="./images/main-page/img2.jpg" alt="Портрет" width="270">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="title-name">Ольга Репина</h3>
+                    <p class="title-name-description">Frontend Developer</p>
             </li>
-            <li>
+            <li class="section-team-member">
                     <img src="./images/main-page/img3.jpg" alt="Портрет" width="270">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="title-name">Николай Тарасов</h3>
+                    <p class="title-name-description">Marketing</p>
             </li>
-            <li>
+            <li class="section-team-member">
                     <img src="./images/main-page/img4.jpg" alt="Портрет" width="270">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="title-name">Михаил Ермаков</h3>
+                    <p class="title-name-description">UI Designer</p>
             </li>
         </ul>
     </section>
     </main>
 
-    <footer>
-        <a href="index.html" lang="en">WebStudio</a>
+    <footer class="footer">
+        <a class="logo link" href="index.html" lang="en"><span class="logo-web">Web</span><span class="logo-studio-white">Studio</span></a>
         <address>
             <ul class="list">
-                <li><a href="https://goo.gl/maps/8wRMJYcDEy7sv4ex5" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li><a class="address link"  href="https://goo.gl/maps/8wRMJYcDEy7sv4ex5" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="address-mail link" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="address-phone link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
