--- a/portfolio.html
+++ b/portfolio.html
@@ -4,94 +4,119 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>WebStudio Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header class="page-header">
         <nav class="navigation">
-            <a class="logo" href="index.html" lang="en">WebStudio</a>
+            <a class="logo link" href="index.html" lang="en"><span class="logo-web">Web</span><span
+                    class="logo-studio-black">Studio</span></a>
             <ul class="menu list">
-                <li class="menu-link"><a href="">Студия</a></li>
-                <li class="menu-link"><a href="">Портфолио</a></li>
-                <li class="menu-link"><a href="">Контакты</a></li>
+                <li><a class="menu-link link" href="">Студия</a></li>
+                <li><a class="menu-link link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="menu-link link" href="">Контакты</a></li>
             </ul>
         </nav>
         <ul class="list">
-            <li class="page-header-email"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="page-header-phone"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="page-header-email link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="page-header-phone link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
+        <!-- Projects -->
         <section>
             <ul class="list">
-                <li class="portfolio-link">Все</li>
-                <li class="portfolio-link">Веб-сайты</li>
-                <li class="portfolio-link">Приложения</li>
-                <li class="portfolio-link">Дизайн</li>
-                <li class="portfolio-link">Маркетинг</li>
+                <li><button type="button" class="filter">Все</button></li>
+                <li><button type="button" class="filter">Веб-сайты</button></li>
+                <li><button type="button" class="filter">Приложения</button></li>
+                <li><button type="button" class="filter">Дизайн</button></li>
+                <li><button type="button" class="filter">Маркетинг</button></li>
             </ul>
             <ul class="list">
                 <li>
-                    <img src="./images/portfolio-page/img1.jpg" alt="Веб-сайт" width="370">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+                    <a href="" class="link">
+                        <img src="./images/portfolio-page/img1.jpg" alt="Веб-сайт" width="370">
+                        <h3 class="project-name">Технокряк</h3>
+                        <p class="project-type">Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
+                    <a href="" class="link">
                     <img src="./images/portfolio-page/img2.jpg" alt="Баскетболисты в прыжке" width="370">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+                    <p class="project-type">Дизайн</p>
+                    </a>
                 </li>
                 <li>
+                    <a href="" class="link">
                     <img src="./images/portfolio-page/img3.jpg" alt="Рыбка с названием ресторана" width="370">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
+                    <h3 class="project-name">Ресторан Seafood</h3>
+                    <p class="project-type">Приложение</p>
+                    </a>
                 </li>
                 <li>
+                    <a href="" class="link">
                     <img src="./images/portfolio-page/img4.jpg" alt="Наушники" width="370">
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="project-name">Проект Prime</h3>
+                    <p class="project-type">Маркетинг</p>
+                    </a>
                 </li>
                 <li>
+                    <a href="" class="link">
                     <img src="./images/portfolio-page/img5.jpg" alt="Две небольшие коробочки" width="370">
-                    <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
+                    <h3 class="project-name">Проект Boxes</h3>
+                    <p class="project-type">Приложение</p>
+                    </a>
                 </li>
                 <li>
+                    <a href="" class="link">
                     <img src="./images/portfolio-page/img6.jpg" alt="Веб-сайт" width="370">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <h3 class="project-name">Inspiration has no Borders</h3>
+                    <p class="project-type">Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
+                    <a href="" class="link">
                     <img src="./images/portfolio-page/img7.jpg" alt="Открытая книга" width="370">
-                    <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <h3 class="project-name">Издание Limited Edition</h3>
+                    <p class="project-type">Дизайн</p>
+                    </a>
                 </li>
                 <li>
+                    <a href="" class="link">
                     <img src="./images/portfolio-page/img8.jpg" alt="Этикетка товара" width="370">
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="project-name">Проект LAB</h3>
+                    <p class="project-type">Маркетинг</p>
+                    </a>
                 </li>
                 <li>
+                    <a href="" class="link">
                     <img src="./images/portfolio-page/img9.jpg" alt="Ноутбук с вебсайтом" width="370">
-                    <h3>Growing Business</h3>
-                    <p>Приложение</p>
+                    <h3 class="project-name">Growing Business</h3>
+                    <p class="project-type">Приложение</p>
+                    </a>
                 </li>
 
             </ul>
         </section>
     </main>
 
-    <footer>
-        <a href="index.html" lang="en">WebStudio</a>
+    <footer class="footer">
+        <a class="logo link" href="index.html" lang="en"><span class="logo-web">Web</span><span
+                class="logo-studio-white">Studio</span></a>
         <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/8wRMJYcDEy7sv4ex5" target="_blank" rel="noreferrer noopener"></a>г. Киев,
-                    пр-т Леси Украинки, 26</li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <ul class="list">
+                <li><a class="address link" href="https://goo.gl/maps/8wRMJYcDEy7sv4ex5" target="_blank"
+                        rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="address-mail link" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="address-phone link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
