--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navigation">
             <a class="logo link" href="index.html" lang="en"><span class="logo-web">Web</span><span class="logo-studio-black">Studio</span></a>
             <ul class="menu list">
-                <li><a class="menu-link link" href="./index.html">Студия</a></li>
+                <li><a class="menu-link current link" href="./index.html">Студия</a></li>
                 <li><a class="menu-link link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="menu-link link" href="">Контакты</a></li>
             </ul>
