--- a/portfolio.html
+++ b/portfolio.html
@@ -32,79 +32,80 @@
     <main>
         <!-- Projects -->
         <section>
-            <ul class="list">
-                <li><button type="button" class="filter">Все</button></li>
-                <li><button type="button" class="filter">Веб-сайты</button></li>
-                <li><button type="button" class="filter">Приложения</button></li>
-                <li><button type="button" class="filter">Дизайн</button></li>
-                <li><button type="button" class="filter">Маркетинг</button></li>
-            </ul>
-            <ul class="list">
-                <li>
-                    <a href="" class="link">
-                        <img src="./images/portfolio-page/img1.jpg" alt="Веб-сайт" width="370">
-                        <h3 class="project-name">Технокряк</h3>
-                        <p class="project-type">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                    <img src="./images/portfolio-page/img2.jpg" alt="Баскетболисты в прыжке" width="370">
-                    <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
-                    <p class="project-type">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                    <img src="./images/portfolio-page/img3.jpg" alt="Рыбка с названием ресторана" width="370">
-                    <h3 class="project-name">Ресторан Seafood</h3>
-                    <p class="project-type">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                    <img src="./images/portfolio-page/img4.jpg" alt="Наушники" width="370">
-                    <h3 class="project-name">Проект Prime</h3>
-                    <p class="project-type">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                    <img src="./images/portfolio-page/img5.jpg" alt="Две небольшие коробочки" width="370">
-                    <h3 class="project-name">Проект Boxes</h3>
-                    <p class="project-type">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                    <img src="./images/portfolio-page/img6.jpg" alt="Веб-сайт" width="370">
-                    <h3 class="project-name">Inspiration has no Borders</h3>
-                    <p class="project-type">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                    <img src="./images/portfolio-page/img7.jpg" alt="Открытая книга" width="370">
-                    <h3 class="project-name">Издание Limited Edition</h3>
-                    <p class="project-type">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                    <img src="./images/portfolio-page/img8.jpg" alt="Этикетка товара" width="370">
-                    <h3 class="project-name">Проект LAB</h3>
-                    <p class="project-type">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="link">
-                    <img src="./images/portfolio-page/img9.jpg" alt="Ноутбук с вебсайтом" width="370">
-                    <h3 class="project-name">Growing Business</h3>
-                    <p class="project-type">Приложение</p>
-                    </a>
-                </li>
+            <h1>Projects</h1>
+                <ul class="list">
+                    <li><button type="button" class="filter">Все</button></li>
+                    <li><button type="button" class="filter">Веб-сайты</button></li>
+                    <li><button type="button" class="filter">Приложения</button></li>
+                    <li><button type="button" class="filter">Дизайн</button></li>
+                    <li><button type="button" class="filter">Маркетинг</button></li>
+                </ul>
+                <ul class="list">
+                    <li>
+                        <a href="" class="link">
+                            <img src="./images/portfolio-page/img1.jpg" alt="Веб-сайт" width="370">
+                            <h2 class="project-name">Технокряк</h2>
+                            <p class="project-type">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link">
+                            <img src="./images/portfolio-page/img2.jpg" alt="Баскетболисты в прыжке" width="370">
+                            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                            <p class="project-type">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link">
+                            <img src="./images/portfolio-page/img3.jpg" alt="Рыбка с названием ресторана" width="370">
+                            <h2 class="project-name">Ресторан Seafood</h2>
+                            <p class="project-type">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link">
+                            <img src="./images/portfolio-page/img4.jpg" alt="Наушники" width="370">
+                            <h2 class="project-name">Проект Prime</h2>
+                            <p class="project-type">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link">
+                            <img src="./images/portfolio-page/img5.jpg" alt="Две небольшие коробочки" width="370">
+                            <h2 class="project-name">Проект Boxes</h2>
+                            <p class="project-type">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link">
+                            <img src="./images/portfolio-page/img6.jpg" alt="Веб-сайт" width="370">
+                            <h2 class="project-name">Inspiration has no Borders</h2>
+                            <p class="project-type">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link">
+                            <img src="./images/portfolio-page/img7.jpg" alt="Открытая книга" width="370">
+                            <h2 class="project-name">Издание Limited Edition</h2>
+                            <p class="project-type">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link">
+                            <img src="./images/portfolio-page/img8.jpg" alt="Этикетка товара" width="370">
+                            <h2 class="project-name">Проект LAB</h2>
+                            <p class="project-type">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link">
+                            <img src="./images/portfolio-page/img9.jpg" alt="Ноутбук с вебсайтом" width="370">
+                            <h2 class="project-name">Growing Business</h2>
+                            <p class="project-type">Приложение</p>
+                        </a>
+                    </li>
 
-            </ul>
+                </ul>
         </section>
     </main>
 
